# multi-os-engine

./: .gitignore  README.md  groups  project.config  settings.gradle
moe/natj/natj/: .gitignore  CMakeLists.txt  NOTICE  build.gradle  clean_build_libffi_currentbranch  natj-build.sh  settings.gradle
moe/natj/natj/gradle/wrapper/: gradle-wrapper.properties
moe/natj/natj/natj-ctests/: build.gradle
moe/natj/natj/natj-ctests/linux-test/: build.gradle  test_remote_linux-build.sh  test_remote_linux.sh
moe/natj/natj/natj-ctests/src/test/native/: C+Functions+Invocation.h  (+12 more)
moe/natj/natj/natj-cxxtests/: README.txt  build.gradle
moe/natj/natj/natj-cxxtests/dyntype/: build.gradle
moe/natj/natj/natj-cxxtests/linux-test/: test_remote_linux-build.sh  test_remote_linux.sh
moe/natj/natj/natj-cxxtests/win-test/: build.gradle
moe/natj/natj/natj-ios/: build.gradle
moe/natj/natj/natj-ios/NatJTestRunner/: build.gradle
moe/natj/natj/natj-ios/natj.xcodeproj/: project.pbxproj
moe/natj/natj/natj-linux/: build.gradle  build_linux.sh  build_remote_linux-build.sh  build_remote_linux.sh
moe/natj/natj/natj-mac/: build.gradle
moe/natj/natj/natj-mac/natj.xcodeproj/: project.pbxproj
moe/natj/natj/natj-ndk/: build.gradle  build.sh
moe/natj/natj/natj-ndk/jni/: Android.mk  Application.mk
moe/natj/natj/natj-objctests/: build.gradle
moe/natj/natj/natj-processor/: build.gradle
moe/natj/natj/natj-win/: COPYING.MinGW-w64-runtime.txt  build.gradle  mingw.mutex.h  mingw.thread.h  premake5.lua
moe/natj/natj/src/test/native/: TestClasses.m  inlineWrappers.m  test_common.h
(+18620 files in other folders)
